fixed jumpy slider on firefox

--- a/wp-content/themes/kstrap/inc/modules/slider/slider.scss
+++ b/wp-content/themes/kstrap/inc/modules/slider/slider.scss
@@ -8,7 +8,7 @@
     //    height: 100vh;
     //}
     @media screen and (min-width: map-get($grid-breakpoints, md)){
-        background-attachment: fixed;
+        background-attachment: fixed !important;
     }
     //@media screen and (min-width: map-get($grid-breakpoints, lg)){
     //    height: 100vh;
